USe new reflect-config.json. Do I have to do this every time?